--- a/PrivateSchoolFrontEnd/src/app/students/read-all-students/read-all-students.component.html
+++ b/PrivateSchoolFrontEnd/src/app/students/read-all-students/read-all-students.component.html
@@ -1,13 +1,13 @@
-<p>read-all-students works!</p>
-<div *ngIf="StudentsList$" class="container">
-  <table class="table table-striped">
+
+  <table class="table">
     <thead>
     <th>First Name</th>
     <th>Last Name</th>
     </thead>
-    <tr *ngFor="let item of StudentsList$ | async">
-      <td>{{item.firstName}}</td>
-      <td>{{item.lastName}}</td>
-    </tr>
+    <tbody class="table-dark">
+      <tr *ngFor="let item of StudentsList$ | async">
+        <td>{{item.firstName}}</td>
+        <td>{{item.lastName}}</td>
+      </tr>
+    </tbody>
   </table>
-</div>
