--- a/PrivateSchoolFrontEnd/src/styles.css
+++ b/PrivateSchoolFrontEnd/src/styles.css
@@ -1,1 +1,30 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'bootstrap/dist/css/bootstrap.min.css';
+
+*{
+    padding: 0;
+    margin: 0;
+    font-family: 'Rubik', sans-serif;
+    box-sizing: border-box;
+}
+.body{
+    background-color: rgb(46, 45, 45);
+}
+nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    justify-content: center;
+    padding-top: 20px;
+    padding-left: 8%;
+    padding-right: 8%;
+}
+ nav ul li{
+     list-style-type: none;
+     display: inline-block;
+     padding: 10px 25px;
+ }
+ nav ul li a {
+     color: aliceblue;
+     text-decoration: none;
+ }
